--- a/render.yaml
+++ b/render.yaml
@@ -29,7 +29,7 @@ services:
       # Example: wp core download --path=/var/www/html/
 
   - name: wordpress-db
-    type: mysql
+    type: render-mysql
     version: "8.0"
     plan: free # Free plan for testing ONLY
     region: oregon
